# computationLabs

./: CMakeLists.txt  gen_gilbert_input.cpp
lab01/: input.txt  lab01_lu.cpp  lab01_rot.cpp
lab02/: input.txt  lab02.cpp
lab03/: lab03.cpp
lab04/: input.txt  lab04.cpp
lab05/: lab05.cpp
lab06/: lab06.cpp
lab07/: lab07.cpp
lab08/: lab08.cpp
lab09/: lab09.cpp
lab10/: lab10.cpp
lab11/: lab11.cpp
lab12/: lab12.cpp
lab13/: lab13.cpp
share/: derivable.cpp  derivable.h  matrix.cpp  matrix.h  utils.cpp  utils.h  vector.cpp  vector.h
